--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,8 @@ jobs:
               git config --global user.email $GH_EMAIL
               git config --global user.name $GH_NAME
 
+              set -ex
+
               git clone $CIRCLE_REPOSITORY_URL out
 
               cd out
