--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "core-js": "^2.5.7",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.0",
+    "qrcode": "^1.3.3",
     "roboto-fontface": "^0.10.0",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
+    "vcards-js": "^2.10.0",
     "web3": "1.0.0-beta.37",
     "zone.js": "^0.8.26"
   },
