--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.6.0",
     "@fortawesome/free-solid-svg-icons": "^5.6.0",
     "core-js": "^2.5.7",
+    "ethereumjs-util": "^6.0.0",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.0",
     "qrcode": "^1.3.3",
