--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.0",
     "core-js": "^2.5.7",
     "ethereumjs-util": "^6.0.0",
+    "ngx-vcard": "^1.1.4",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.0",
     "qrcode": "^1.3.3",
     "roboto-fontface": "^0.10.0",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
-    "vcards-js": "^2.10.0",
     "web3": "1.0.0-beta.37",
     "zone.js": "^0.8.26"
   },
